<resources>
    <string name="app_name">FieldMaxV2</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="search_hint">Search.....</string>
    <string name="search">SEARCH</string>
    <string name="orderNumber">ENTER THE ORDER NUMBER</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="modes">Modes</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="demandDraft">Demand Draft</string>
    <string name="paidAmount">Paid Amount</string>
    <string name="unpaidAmount">Unpaid Amount</string>
    <string name="bankName">Bank Name</string>
    <string name="submit">Submit</string>
    <string name="salesOrder">Sales Order</string>
    <string name="cheque_DemandDraftNumber">Cheque NUmber/Demand Draft Number</string>
    <string name="payment">Payment</string>
    <string name="pocketMIS">Pocket MIS</string>
    <string name="competitors">Competitors</string>
    <string name="enquiry">Enquiry</string>
    <string name="complaints">Complaints</string>
    <string name="expenseDate">Expense Date</string>
    <string name="petrolExpense">Petrol Expense</string>
    <string name="foodExpense">Food Expense</string>
    <string name="mobileExpense">Mobile Expense</string>
    <string name="otherExpense">Other Expense</string>
    <string name="totalExpenseText">Your Total Expense</string>
    <string name="totalExpenseButtonText">Get Total Expense</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="splashText">FIELD  MAX</string>
    <string name="enquiryText">Write Yout Enquiry Here</string>
    <string name="orderDate">OrderDate -</string>
    <string name="productName">Product Name</string>
    <string name="deliveryDateText">DeliveryDate</string>
    <string name="quantityText">Quantity</string>
    <string name="priceText">Price</string>
    <string name="deliveryDate">DeliveryDate</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="footerTextHome">HOME</string>
    <string name="footerTextCustomer">Customer</string>
    <string name="footerTextInbox">Inbox</string>
    <string name="footerTextBeats">Beats</string>
    <string name="brandName">BrandName</string>
    <string name="skuText">Sku</string>
    <string name="retailerPriceText">Retailer Price</string>
    <string name="getRouteButton">Get Routes</string>
    <string name="field_max_map_key">AIzaSyALcjOLQ8UtRuU8PJqQ4c50ZDmWoKpP6pI</string>
    <string-array name="BeatDays">
        <item>BEAT DAYS</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>

    </string-array>

    <string-array name="SKU">
        <item>500gm</item>
        <item>1KG</item>
        <item>2KG</item>
        <item>5KG</item>
        <item>10KG</item>
        <item>50KG</item>

    </string-array>

    <string-array name="ChartType">
        <item>ChartType</item>
        <item>PieChart</item>
        <item>LineChart</item>
        <item>BarChart</item>


    </string-array>

    <string-array name="PaymentMode">
        <item>Select the Payment Mode</item>
        <item>CashMode</item>
        <item>ChequeMode</item>
        <item>DemandDraftMode</item>
    </string-array>
    
    <string name="Catalog">CATALOG</string>
    <string name="Expenses">EXPENSES</string>
    <string name="Claims">CLAIMS</string>
    <string name="Logout">LOGOUT</string>



    <string name="open_drawer">OPEN DRAWER</string>
    <string name="close_drawer">CLOSE DRAWER</string>

</resources>
