<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView_pocket_mis"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ColorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/orderDate"
            android:textColor="@color/gray69"
            android:layout_weight="0.25"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:id="@+id/orderDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="0.75"
            android:textColor="@color/deepGray"
            android:textSize="@dimen/textSize_14sp" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/gray69" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/ColorPrimary"
        android:weightSum="1">


        <ImageView
            android:id="@+id/productImage"
            android:layout_width="30dp"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_weight="0.25"
            android:src="@drawable/image_place_holder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textSize="@dimen/textSize_16sp"
                android:textColor="@color/deepGray"
                android:layout_gravity="center" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10dp"
                android:weightSum="1">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/deliveryDate"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/gray69" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:text="@string/quantityText"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/gray69" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:text="@string/priceText"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/gray69" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/deliveryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/deliveryDate"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/deepGray" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.002"
                    android:background="@color/light_gray" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:text="@string/quantity"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/deepGray" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.002"
                    android:background="@color/light_gray" />


                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:text="@string/price"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/deepGray" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>