<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/ColorPrimary">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/ColorPrimary">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/PrimaryColor"
            android:textSize="@dimen/textSize_24sp"
      
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_20dp"

        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_20dp"
        android:background="@color/ColorPrimary">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amountLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/amount"
                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/dateLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:textColorHint="@color/gray69"
                    android:background="@android:color/transparent"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/date"
                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />


        </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/paymentMode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:weightSum="4"
                android:checkedButton="@+id/cashMode">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/modes"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textSize_16sp"
                    android:textColor="@color/gray69" />

                <RadioButton
                    android:id="@+id/cashMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textSize_14sp"
                    android:layout_weight="0.9" />

                <RadioButton
                    android:id="@+id/chequeMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cheque"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textSize_14sp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/demandDraftMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/demandDraft"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textSize_14sp"
                    android:layout_weight="1.4" />

            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@color/light_gray"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/paidAmountLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:textColorHint="@color/gray69"
                    android:background="@android:color/transparent"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/paidAmount"
                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />



        </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/unpaidAmountLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:textColorHint="@color/gray69"
                    android:background="@android:color/transparent"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/unpaidAmount"
                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />

        </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/bankNameLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/bankName"

                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />


        </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/chequeNumberLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:theme="@style/TextLabel">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/cheque_DemandDraftNumber"
                    android:textSize="@dimen/textSize_16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/light_gray" />


            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_10dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:background="@color/PrimaryColor"
                    android:layout_alignParentBottom="true"
                    android:text="@string/submit"
                    android:textSize="@dimen/textSize_18sp"
                    android:textColor="@color/ColorPrimary" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>